# bob.bio.video

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  version.txt
bob/bio/video/: __init__.py  annotator.py  transformer.py  utils.py
bob/bio/video/config/: video_wrapper.py
bob/bio/video/config/database/: youtube.py
bob/bio/video/database/: database.py  youtube.py
bob/bio/video/extractor/: Wrapper.py
bob/bio/video/preprocessor/: Wrapper.py
bob/bio/video/test/: test_annotators.py  test_databases.py  test_utils.py
bob/bio/video/test/dummy/: database.py
bob/bio/video/transformer/: Wrapper.py
bob/bio/video/utils/: FrameContainer.py  FrameSelector.py  __init__.py
conda/: meta.yaml
doc/: conf.py  extra-intersphinx.txt  faq.rst  implemented.rst  index.rst
src/bob/bio/video/: __init__.py  utils.py
src/bob/bio/video/database/: youtube.py
tests/: test_annotators.py  test_databases.py  test_utils.py
tests/data/: video_like.hdf5
tests/dummy/: database.py
